--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         Available: 
         <span id="count" class="count"></span>
       </p>
-      <button id="buy-phone" class="buy-button">Buy</button>
+      <button id="buy-phone" class="buy-button">Buy Phone</button>
     </div>
     
     <div class="container">
@@ -26,13 +26,22 @@
         Available: 
         <span id="count-tab" class="count"></span>
       </p>
-      <button id="buy-tablet" class="buy-button">Buy</button>
+      <button id="buy-tablet" class="buy-button">Buy Tablet</button>
+    </div>
+
+    <div class="container">
+      <img src="./img/tv.png" alt="tablets">
+      <p class="description">
+        Available: 
+        <span id="count-tv" class="count"></span>
+      </p>
+      <button id="buy-tv" class="buy-button">Buy TV</button>
     </div>
   </div>
   
   <!-- Import redux -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/redux/4.1.0/redux.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <!-- My JS -->
-  <script src="./app.js"></script>
+  <script src="./app2.js"></script>
 </body>
 </html>
